--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -80,10 +80,10 @@
 		<li>folklor/szamanizm</li>
 		<li>motoryzacja</li>
 		<li>niska dzietność</li>
-		<li>opieka psychologiczna/psychiatryczna</li>
 		<li>popkultura</li>
 		<li><del>bieżące sprawy</del></li>
 		<li><del>militaria (Polska-Korea)</del></li>
+		<li><del>opieka psychologiczna/psychiatryczna</del></li>
 	</ul>
 </details>
 
@@ -147,12 +147,12 @@
 				<td rowspan="2">8 listopada 2024</td>
 				<td class="schedule-exam">Kolokwium 1 (8.00–8.30)</td>
 				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25z/wats3-1/testy/1"></a--></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">opieka psychologiczna/psychiatryczna</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/4">청소년 정신과 진료 4년 새 65%↑…"스마트폰이 주요 원인"</a></td>
 			</tr>
 		</tbody>
 		<tbody>
