--- a/uj/zajecia/24-25z/wats3-1/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/3/index.html
@@ -189,10 +189,35 @@
 <h2 class="homework">Praca domowa</h2>
 
 <p>11. 압축공기를 이용해 항공기를 발사하는 ‘공압식 발사대’에서 발사된다.</p>
+<ul>
+	<li>Są one wystrzeliwane za pomocą sprężonego powietrza z wyrzutni pneumatycznych.</li>
+	<li>Są one wystrzeliwane z „wyrzutni pneumatycznej”, która wykorzystuje sprężone powietrze do wystrzeliwania samolotów.</li>
+	<li>Sprzężone powietrze używane jest do wystrzelenia samolotu/ statku powietrznego z wyrzutni pneumatycznej.</li>
+</ul>
 <p>12-1. 또한 표적 주위를 배회하다 영상 정보 등을 이용해</p>
+<ul>
+	<li>Dodatkowo drony używają nagrań wideo podczas krążenia wokół celu</li>
+	<li>Co więcej, krążą wokół celu i wykorzystują dane z nagrań wideo,</li>
+	<li>Celem jest wykorzystanie informacji z nagrań krążenia dronu wokół celu</li>
+</ul>
 <p>12-2. 표적을 정밀 타격하는 것이다.</p>
+<ul>
+	<li>Dzięki czemu precyzyjnie trafiają w cel.</li>
+	<li>aby dokonać precyzyjnego ataku na cel.</li>
+	<li>Aby wykonać precyzyjne uderzenie w cel.</li>
+</ul>
 <p>13-1. 올 4월에는 러시아의 지대공 미사일 이동식 레이더 기지를 타격하는 등</p>
+<ul>
+	<li>W kwietniu tego roku drony zostały użyte do ataku na rosyjską bazę pocisków ziemia-powietrze</li>
+	<li>W kwietniu bieżącego roku zaatakowały rosyjską mobilną jednostkę radarową obrony przeciwlotniczej z pociskami rakietowymi ziemia-powietrze.</li>
+	<li>W kwietniu tego roku rosyjski pocisk ziemia-powietrze uderzył w mobilną bazę radarową w Rosji</li>
+</ul>
 <p>13-2. 전장에서 막강한 위력을 보여주기도 했다.</p>
+<ul>
+	<li>Co pokazało ich siłę na polu bitwy.</li>
+	<li>To pokazuje, jak potężną siłą są [te drony] na polu walki.</li>
+	<li>Demonstrując swoją potężna siłę na polu walki.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -222,14 +247,59 @@
 <h3>번역</h3>
 
 <p>14-1. 국방부 관계자는 이번 드론 구매 배경에 대해</p>
+<ul>
+	<li>Przedstawiciel koreańskiego Ministerstwa Obrony Narodowej wypowiedział się na temat tła zakupu dronów</li>
+	<li>Przedstawiciel Ministerstwa Obrony Narodowej mówił o kulisach kupowania tychże dronów:</li>
+	<li>Przedstawiciele Ministerstwa Obrony Narodowej zarysowali tło zakupu drona</li>
+</ul>
 <p>14-2. “북한이 올해 8월 자폭 드론 개발을 공개했다”며</p>
+<ul>
+	<li>„Korea Północna w sierpniu tego roku pokazała prace nad rozwojem dronów kamikadze”</li>
+	<li>“Korea Północna w sierpniu tego roku ogłosiła rozwój dronów kamikaze”.</li>
+	<li>„Korea Północna ujawniła prace nad rozwojem dronów kamikadze w sierpniu bieżącego roku”</li>
+</ul>
 <p>14-3. 북한 도발에 대한 상응 조치임을 강조했다.</p>
+<ul>
+	<li>Które stanowi odpowiedź na prowokacje ze strony Korei Północnej.</li>
+	<li>Podkreślił, iż podjęcie takich kroków jest odpowiedzią na prowokacje ze strony Korei Północnej.</li>
+	<li>Podkreślając działania prowokacyjne Korei Północnej wobec Korei Południowej.</li>
+</ul>
 <p>15-1. 저가의 소형 자폭 드론이 우크라이나 전쟁에서</p>
+<ul>
+	<li>Tanie i niewielkie drony w wojnie na Ukrainie</li>
+	<li>Tani i niewielki dron kamikaze atakuje na wojnie w Ukrainie</li>
+	<li>Tanie i niewielkie drony kamikadze używane na wojnie w Ukrainie</li>
+</ul>
 <p>15-2. 전차 등 고가의 대형 무기를 타격하는 등</p>
+<ul>
+	<li>Atakują czołgi i drogą broń</li>
+	<li>duży i drogi sprzęt taki, jak czołgi.</li>
+	<li>Mogą uderzyć w drogą i duża broń taką jak czołgi</li>
+</ul>
 <p>15-3. 전쟁 판도를 바꾸는 게임체인저로 활약 중인 점도 구매 배경이 됐다.</p>
+<ul>
+	<li>Co pozwala przechylić szalę zwycięstwa, co wraz z ich szerokim zastosowaniem stanowi powód zakupu dronów.</li>
+	<li>Powodem zakupu był również fakt, iż ich szerokie wykorzystanie stało się przełomem przechylającym szalę zwycięstwa w wojnie.</li>
+	<li>Ich szerokie zastosowanie, które mogłoby się przyczynić do zwycięstwa w wojnie również mogło być przyczyną zakupu.</li>
+</ul>
 <p>16-1. 또 폴란드가 최근 2년간 K-9 자주포 등</p>
+<ul>
+	<li>Dodatkowo Polska w ciągu ostatnich dwóch lat</li>
+	<li>W ciągu ostatnich dwóch lat Polska zakupiła armatohaubice K-9,</li>
+	<li>Ponadto Polska w ciągu ostatnich dwóch lat podpisała umowę na zakup armatohaubicy K9</li>
+</ul>
 <p>16-2. 약 28조 원에 달하는 한국산 무기 구매 계약을 체결하는 등</p>
+<ul>
+	<li>Podpisała umowę na zakup koreańskich armatohaubic K-9 o wartości około 28 bilionów wonów</li>
+	<li>podpisując kontrakt na zakup koreańskiej broni w wysokości 28 bln wonów.</li>
+	<li>których łączna kwota za zakup koreańskiej broni wyniosła 28 bilonów wonów</li>
+</ul>
 <p>16-3. ‘K방산의 큰손’으로 자리매김한 점도 고려됐다.</p>
+<ul>
+	<li>Co sprawoło, że została wzięta pod uwagę jako „duża ręka K-Bangsan”.</li>
+	<li>Tym sposobem [Polska] została uznana za “wielką dłoń koreańskiego przemysłu zbrojeniowego”.</li>
+	<li>Należy wziąć pod uwagę fakt, że zajął miejsce koreańskiej obrony.</li>
+</ul>
 
 <hr class="homework">
 
