--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -78,7 +78,6 @@
 
 	<ul class="sample-topics">
 		<li>architektura</li>
-		<li>botanika/florystyka</li>
 		<li>branża beauty (np. kosmetyki)</li>
 		<li>dyplomacja</li>
 		<li>e-sport</li>
@@ -92,6 +91,7 @@
 		<li>relacje międzykoreańskie</li>
 		<li>społeczeństwo</li>
 		<li>wojskowość</li>
+		<li><del>botanika/florystyka</del></li>
 		<li><del>mowa potoczna</del></li>
 		<li><del>sprawy kryminalne</del></li>
 	</ul>
@@ -157,12 +157,12 @@
 				<td rowspan="2">8 listopada 2024</td>
 				<td class="schedule-exam">Kolokwium 1 (9.45–10.15)</td>
 				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25z/wats3-2/testy/1"></a--></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">botanika/florystyka</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-2/zajecia/4">김정은도 삽 들었다‥나무 집착 북한 속사정은?</a></td>
 			</tr>
 		</tbody>
 		<tbody>
