--- a/uj/zajecia/24-25z/wats3-2/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/3/index.html
@@ -105,7 +105,7 @@
 
 <p>5. "세종대왕님, '<strong>무물</strong>(무엇이든 물어보세요)'하십시오.</p>
 <ul>
-	<li>„Wasza Wysokość, proszę <strong><i>mumul</i></strong><sup>1</sup>ować.</li>
+	<li>„Wasza Wysokość, proszę <strong><i>mumulować</i></strong><sup>1</sup>.</li>
 </ul>
 <p>6-1. 2022년 우리 젊은 세대들은</p>
 <ul>
@@ -175,10 +175,58 @@
 <h3>번역</h3>
 
 <p>10. 10월 9일 한글날은 우리 글자 한글의 우수성을 기리기 위해 지정되었다.</p>
+<ul>
+	<li>Dzień Hangula wypada 9 listopada i został on ustanowiony, by chwalić znakomitość naszego alfabetu.</li>
+	<li>Dzień Hangula został wyznaczony na 9 października, żeby wychwalać znakomitość alfabetu Hangul.</li>
+	<li>Dzień Hangula, obchodzony 9 października i został on ustanowiony, aby wyznaczyć(podkreślić) znakomitość koreańskiego alfabetu - Hangul.</li>
+	<li>9 października został wyznaczony Dniem Hangula, by wychwalać znakomitość liter w alfabecie koreańskim.</li>
+	<li>9 października, czyli Dzień Hangula, to dzień, w którym dbamy o wspaniałość naszego alfabetu.</li>
+	<li>9 października został wyznaczony jako Dzień Hangula, abyśmy mogli wychwalać znakomitość koreańskiego alfabetu.</li>
+	<li>10 października został wyznaczony jako Dzień Hangeula, kiedy to wychwalamy znakomitość koreańskiego alfabetu (koreańskiego pisma).</li>
+	<li>Dzień Hangula, obchodzony 9 października został wyznaczony dla upamiętnienia znakomitości naszego alfabetu.</li>
+</ul>
 <p>11. 단순히 빨간날(쉬는날)로 생각하고 가볍게 넘기기가 쉽다.</p>
+<ul>
+	<li>Zwyczajne myślenie o nim jak o czerwonym dniu (dniu wolnym od pracy) i przejście obojętnie byłoby wygodne.</li>
+	<li>Łatwo jest myśleć o nim po prostu jako o „czerwonym dniu” (dniu wolnym) i z lekkością przejść obok niego.</li>
+	<li>Łatwo jest potraktować to po prostu jako dodatkowy dzień wolny i przejść nad tym do porządku dziennego.</li>
+	<li>Łatwo przejść obok niego bez namysłu i po prostu traktować go jako dzień wolny.</li>
+	<li>Łatwo pomyśleć o nim, jako o lekkim, czerwonym” dniu [kor. bbalgannal], czyli dniu wolnym od pracy.</li>
+	<li>Po prostu łatwo jest myśleć o tym jako czerwonym dniu (dniu wolnym) i potraktować lekko.</li>
+	<li>Ale po prostu łatwiej jest myśleć o nim jako zwykłym dniu wolnym (czerwonym dniu w kalendarzu).</li>
+	<li>Łatwo przejść nad tą datą i myśleć o niej jedynie jako o (bbalganal - „czerwonym dniu" - wolnym w kalendarzu) luźnym dniu wolnym.</li>
+</ul>
 <p>12. 현재 MZ세대 사이에서 신조어, 줄임말이나 외래어 등이 무분별하게 사용되고 있다.</p>
+<ul>
+	<li>Obecnie wśród pokoleń Z i Y neologizmy, skróty i zapożyczenia są używane bezmyślnie.</li>
+	<li>Obecnie wśród pokolenia MZ neologizmy, skróty, zapożyczenia itp. są bezmyślnie używane.</li>
+	<li>W czasach dzisiejszych wśród pokolenie Z i Y skróty i zapożyczenia używane są w sposób bezmyślny.</li>
+	<li>Obecnie wśród pokolenia Y i Z, neologizmy, skróty, zapożyczenia itp. są bezmyślnie używane.</li>
+	<li>Obecnie, pośród generacji Y i Z, występuje bezmyślne używanie neologizmów i zapożyczeń z obcych języków.</li>
+	<li>Obecnie wśród pokoleń X i Y neologizmy, skróty i zapożyczenia są bezmyślnie używane.</li>
+	<li>Obecnie wśród pokolenia MZ bezmyślnie używane są neologizmy, skróty oraz zapożyczenia, itp.</li>
+	<li>Obecnie, wśród pokolenia Y i Z powszechne jest bezmyślne korzystanie z neologizmów, skrótów i zapożyczeń.</li>
+</ul>
 <p>13-1. 우리 글에 대한 소중함을 알고</p>
+<ul>
+	<li>Powinniśmy być świadomi wartości naszego pisma i</li>
+	<li>Znamy wartość naszego pisma i</li>
+	<li>Powinniśmy doceniać wartość naszego języka</li>
+	<li>Wiemy że nasze pismo jest wartościowe i</li>
+	<li>Znając istotność naszego alfabetu,</li>
+	<li>Znając wartość naszego pisma,</li>
+</ul>
 <p>13-2. 바른 말이 잊혀지는 것에 대한 경각심을 가져야 한다.</p>
+<ul>
+	<li>zachować czujność, żeby nie zapomnieć o poprawnej mowie.</li>
+	<li>musimy zachować czujność, gdy zapominana jest poprawna mowa.</li>
+	<li>i być czujni wobec zapominania o poprawnych słowach.</li>
+	<li>musimy być czujni by poprawna mowa nie została zapomniana.</li>
+	<li>musimy być czujni, aby pamiętać o naszym poprawnym słownictwie.</li>
+	<li>powinniśmy mieć świadomość, że poprawna mowa jest zapominana.</li>
+	<li>13. Mając świadomość tego, jak wartościowe jest koreańskie pismo (koreański alfabet), należy zachować czujność, aby poprawna mowa nie poszła w zapomnienie.  </li>
+	<li>13. Znając wartość naszego alfabetu, musimy być czujni, aby poprawne słownictwo nie zostało zapomniane.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -211,12 +259,76 @@
 <h3>번역</h3>
 
 <p>14. 물론 세대가 바뀌고 세상이 변하면서 언어에도 유행이 있다.</p>
+<ul>
+	<li>Oczywiście pokolenia się zmieniają, a wraz z nimi świat i trendy językowe.</li>
+	<li>To oczywiste, że, podczas gdy pokolenia i świat się zmieniają, język również podlega modzie.</li>
+	<li>Oczywiście ze zmianą pokolenia zmienił się świat, a wraz z tym zmieniają się trendy językowe.</li>
+	<li>Oczywiście, pokolenia się zmieniają i wraz ze zmianą świata zmienia się moda na język.</li>
+	<li>Oczywiście, wraz ze zmieniającym się światem i pokoleniami, w języku także pojawiają się nowe trendy.</li>
+	<li>Oczywiście pokolenia i świat się zmieniają a w języku tworzą się trendy.</li>
+	<li>Oczywiście, z każdym pokoleniem zmienia się świat, a co za tym idzie sposób, w jaki używa ono języka.</li>
+	<li>Oczywiście, wraz z wymianą pokoleniową i zmieniającym się światem, w języku również pojawia się moda.</li>
+</ul>
 <p>15-1. 먼저, 전세계적으로 SNS가 발달하며</p>
+<ul>
+	<li>Po pierwsze, media społecznościowe rozwinęły się na skalę globalną i</li>
+	<li>Przede wszystkim, przez rozwój mediów społecznościowych na całym świecie,</li>
+	<li>Przede wszystkim, dzięki rozwojowi mediów społecznościowych na całym świecie</li>
+	<li>Przede wszystkim, na całym świecie rozwijają się media społecznościowe</li>
+	<li>Po pierwsze, na całym świecie rozwijają się media społecznościowe,</li>
+	<li>Po pierwsze, na całym świecie rozwijają się media społecznościowe i</li>
+</ul>
 <p>15-2. 국내 청소년들의 외국어에 대한 학구열이 높아지고 있다.</p>
+<ul>
+	<li>Zwiększył się pęd koreańskich nastolatków do nauki innych języków.</li>
+	<li>W kraju pęd młodych ludzi do nauki języków obcych wzrasta.</li>
+	<li>zainteresowanie nauką języków obcych wśród koreańskich nastolatków wzrasta.</li>
+	<li>Pęd do nauki języków obcych wśród koreańskich nastolatków jest wysoki.</li>
+	<li>co zwiększa zapał koreańskich nastolatków do nauki języków obcych.</li>
+	<li>u koreańskich nastolatków wzrasta zapał do nauki języków obcych.</li>
+	<li>15. Przede wszystkim, ze względu na rozwój ogólnoświatowych mediów społecznościowych, wśród koreańskich nastolatków wzrasta pęd do nauki języków obcych.</li>
+	<li>15. Po pierwsze, rozwój mediów społecznościowych na świecie zwiększa u koreańskich nastolatków zapał do nauki języków obcych. </li>
+</ul>
 <p>16-1. 자연스럽게 외국어 유입이 늘어나면서</p>
+<ul>
+	<li>Naturalnie, wraz ze wzrostem wpływu obcych języków</li>
+	<li>W miarę zwiększania się naturalnego napływu języków obcych,</li>
+	<li>W sposób naturalny napływ języka obcego wzrasta,</li>
+	<li>Oczywiście, w trakcie wzrostu napływu języków obcych,</li>
+	<li>Naturalnie, przy zwiększonym napływie języków obcych,</li>
+	<li>Naturalnie przez wzrost napływu języków obcych,</li>
+</ul>
 <p>16-2. 다른 언어지만 우리말처럼 익숙해진 외래어가 있다.</p>
+<ul>
+	<li>Pojawiają się zapożyczenia, które mimo, że są obce, są znane jak język koreański.</li>
+	<li>chociaż są to inne języki, istnieją zapożyczenia tak samo znajome jak nasz język.</li>
+	<li>pewne zapożyczenia chociaż pochodzą z innych języków brzmią nam teraz podobnie jak rodzime słowa.</li>
+	<li>mają one znajome dla nas zapożyczenia, pomimo bycia językami obcymi.</li>
+	<li>pojawiają się zapożyczenia, które stały się tak znane jak język koreański.</li>
+	<li>pomimo innych języków pojawiły się zapożyczenia, które stały się znajome jak nasz język.</li>
+	<li>16. Naturalnie, wraz ze zwiększeniem napływu języków obcych, zapożyczenia z tychże języków stały się tak znajome dla Koreańczyków, jak ich rodzimy język.</li>
+	<li>16. Naturalnie, z rosnącym napływem języków obcych, język staje się inny, ale są obcojęzyczne słowa, które stały się równie znajome jak koreańskie. </li>
+</ul>
 <p>17-1. 우리가 인지하지 못하고 자주 사용했던 빵, 비닐, 시소, 요지 등도</p>
+<ul>
+	<li>Nie zdajemy sobie sprawy, że słowa używane przez nas często, takie jak bbang (tzn ,,pieczywo”), binil (tzn. ,,winyl”) oraz jodzi (tzn. ,, wykałaczka”),</li>
+	<li>Nie zdajemy sobie sprawy, że często używane słowa, takie jak chleb, plastik, huśtawka, wykałaczka etc.</li>
+	<li>Nie zdajemy sobie sprawy jak często używamy takich słów jak „chleb”, „plastik”, „huśtawka” oraz „wykałaczka” itp.</li>
+	<li>Nie świadome dla nas i często używane słowa takie jak bbang (t.z. chleb), binil (t.z. winylowe), siso (t.z. huśtawka) yochi (t.z. substancja) i inne,</li>
+	<li>Często nie zdajemy sobie sprawy, że słowa, które często używamy, takie jak 빵 (chleb), 비닐 (winyl), 시소 (huśtawka), 요지(wykałaczka),</li>
+	<li>Nie zdajemy sobie sprawy, że często używane przez nas 빵(chleb), 비닐(winyl), 시소 (huśtawka), 요지 (wykałaczka) to</li>
+</ul>
 <p>17-2. 각각 포르투갈어와 영어, 일본어에서 그대로 유래된 말이다.</p>
+<ul>
+	<li>Pochodzą odpowiednio z języka portugalskiego, języka angielskiego i języka japońskiego.</li>
+	<li>są słowami, które niezmienione pochodzą odpowiednio z języka portugalskiego, angielskiego i japońskiego.</li>
+	<li>odpowiednio te słowa pochodzą z języka portugalskiego, japońskiego i angielskiego.</li>
+	<li>mają odpowiednio swoje źródło w języku portugalskim i japońskim bez zmian w wymowie.</li>
+	<li>To zapożyczenia, pochodzące odpowiednio z języka portugalskiego, angielskiego i japońskiego.</li>
+	<li>odpowiednio pochodzące słowa bezpośrednio z języka portugalskiego, angielskiego i japońskiego.</li>
+	<li>17. Koreańczycy nie zdają sobie sprawy, że często używane słowa takie jak chleb, winyl, huśtawka, wykałaczka, w niezmienionej formie pochodzą odpowiednio z języka portugalskiego, angielskiego oraz japońskiego.</li>
+	<li>17. Często używane nieświadomie zapożyczenia, takie jak chleb, winyl, huśtawka, wykałaczka i tym podobne pochodzą w niezmienionej formie odpowiednio z języka portugalskiego, angielskiego i japońskiego.</li>
+</ul>
 
 <hr class="homework">
 
