--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -48,9 +48,12 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row">2</th>
-				<td>22 października 2024</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2">1과 음식, 2과 취미</a></td>
+				<th scope="row" rowspan="2">2</th>
+				<td rowspan="2">22 października 2024</td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-1">1과 음식, 2과 취미</a></td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-2">부침개 요리법 (przepis na placki koreańskie)</a></td>
 			</tr>
 		</tbody>
 		<tbody>
