--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -118,7 +118,8 @@
 			<tr>
 				<th scope="row">19</th>
 				<td>22 maja 2025</td>
-				<td class="schedule-lecture" colspan="3" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/10">6과. 사과 다섯 개 주세요</a></td>
+				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/10">6과. 사과 다섯 개 주세요</a></td>
+				<td class="schedule-presentation" rowspan="3">동물의 소리</td>
 			</tr>
 			<tr>
 				<th scope="row">20</th>
@@ -131,12 +132,12 @@
 			<tr>
 				<th scope="row">22</th>
 				<td>12 czerwca 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/11">7과. 일곱 시에 시작해요</a></td>
+				<td class="schedule-presentation" rowspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">23</th>
 				<td>26 czerwca 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 		</tbody>
 	</table>
