--- a/viiilo/zajecia/25-26/jk2/index.html
+++ b/viiilo/zajecia/25-26/jk2/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>Język koreański - poziom zaawansowany</title>
+	<title>한국어 2급</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
