--- a/uj/zajecia/24-25z/wats3-1/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/2/index.html
@@ -13,23 +13,169 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</h1>
 
-<h2></h2>
+<h2>bieżące sprawy – "교도소 급식만도 못하네"…소방관 '3000원대 부실급식' 충격</h2>
 
 <ul class="gallery">
-	<li></li>
+	<li><a href="uj/zajecia/24-25z/wats3-1/zajecia/2/img/소방소급식1.jpg"><img src="uj/zajecia/24-25z/wats3-1/zajecia/2/img/소방소급식1.jpg" alt="소방소 급식 1"></a></li>
+	<li><a href="uj/zajecia/24-25z/wats3-1/zajecia/2/img/소방소급식2.jpg"><img src="uj/zajecia/24-25z/wats3-1/zajecia/2/img/소방소급식2.jpg" alt="소방소 급식 2"></a></li>
+	<li><a href="uj/zajecia/24-25z/wats3-1/zajecia/2/img/교도소구치소급식.jpg"><img src="uj/zajecia/24-25z/wats3-1/zajecia/2/img/교도소구치소급식.jpg" alt="교도소와 구치소 급식"></a></li>
 </ul>
 
 <h3>어휘</h3>
 
 <ul>
+	<li>교도소 - więzienie</li>
+	<li>급식 - posiłek (np. w szkole)</li>
+	<li>소방관 - strażak</li>
+	<li>–대 - na poziomie</li>
+	<li>부실 - być biednym/kiepskim/niewystarczającym</li>
+	<li>충격 - szok</li>
+	<li>공무원 - urzędnik państwowy</li>
+	<li>상 - platforma</li>
+	<li>확산하다 - rozprzestrzeniać się</li>
+	<li>논란 - kontrowersje</li>
+	<li>불거지다</li>
+	<li>끼 - posiłek</li>
+	<li>단가 - koszt (np. produkcji, przygotowania)</li>
+	<li>수준 - poziom</li>
+	<li>그치다 - pozostać</li>
+	<li>처우 - złe traktowanie</li>
+	<li>개선 - poprawa</li>
+	<li>시급하다 - być nagłym</li>
+	<li>지적 - uwaga, wskazówka</li>
+</ul>
+
+<h3>문법</h3>
+
+<ul>
+	<li>–만도 못하다 = –보다도 못하다</li>
+	<li>–로 인하다 = 때문이다</li>
 </ul>
 
 <h3>번역</h3>
 
+<p>0. "교도소 급식만도 못하네"…소방관 '3000원대 부실급식' 충격</p>
+<p>1. 소방 공무원들이 실제로 먹고 있는 급식 사진이 온라인상에 확산했다.</p>
+<p>2. 이로 인해 부실 급식 논란이 불거졌다.</p>
+<p>3. 심한 경우는 한 끼 단가가 3000원 수준에 그친 곳도 있다고 확인됐다.</p>
+<p>4. 소방관 처우 개선이 시급하다는 지적이 나온다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>소방청 - Komenda Główna Straży Pożarnej</li>
+	<li>표본 - próbka, przykład</li>
+	<li>도시락 - drugie śniadanie (tutaj: dania instant)</li>
+	<li>미치다 - osiągnąć</li>
+	<li>드러나다 - okazać się</li>
+</ul>
+
+<h3>문법</h3>
+
+<ul>
+	<li>–에 따르면</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>5-1. 소방청으로부터 받은 자료에 따르면</p>
+<p>5-2. 전국 소방서 중 단가가 가장 낮은 곳은 대구 A 소방서로 3112원이었다.</p>
+<p>6. 경남 B 소방서(3852원), 전북 C 소방서(3920원)가 그 다음으로 낮았다.</p>
+<p>7. 소방청에서 전국 241개 소방서 가운데 지역별 1곳의 급식단가를 표본조사한 결과다.</p>
+<p>8-1. ▶전남 D 소방서 ▶강원 E 소방서 ▶울산 F 소방서 ▶서울 G 소방서는 한 끼 급식 단가가 4000원대로,</p>
+<p>8-2. 편의점 도시락에도 미치지 못하는 가격으로 드러났다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>공립 - publiczny</li>
+	<li>무상 - bezpłatny</li>
+	<li>결식 - niedożywienie</li>
+	<li>우려 - podejrzenie</li>
+	<li>아동 = 아이</li>
+	<li>–와/과 비교하다 - porównać (coś z czymś)</li>
+	<li>한참 = 훨씬</li>
+	<li>낮다 - być niskim (np. o poziomie)</li>
+	<li>–별(別) - pomiędzy, wśród</li>
+	<li>최대 - najbardziej, najwięcej</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>9. 서울시 공립고등학교의 무상급식 단가(5398원), 서울시 결식우려아동 급식단가(9000원)와 비교해도 한참 낮은 수준이다.</p>
+<p>10. 소방서별로도 최대 2.2배까지 차이가 났다.</p>
+<p>11-1. 조사 결과 급식 단가가 가장 높은 곳은 인천 H 소방서(6887원)였고,</p>
+<p>11-2. 제주 I 소방서(6705원), 충북 J 소방서(6255원), 경기남부 K 소방서(6200원)가 뒤를 이었다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>천차만별 - różnić się drastycznie</li>
+	<li>이유 - powód, przyczyna</li>
+	<li>시도 = 도시와 도</li>
+	<li>예산 - budżet</li>
+	<li>지원 - wsparcie</li>
+	<li>근거 - podstawa</li>
+	<li>정액(定額) = 정해진 액수 - ustalona kwota</li>
+	<li>–비 - koszt</li>
+	<li>내에서 - wewnątrz</li>
+	<li>행정 - administracja</li>
+	<li>기준 - kryterium</li>
+	<li>현업 - praca w terenie</li>
+	<li>근무자 - pracownik</li>
+	<li>교대 - zmiana (w pracy)</li>
+	<li>영향 - wpływ</li>
+	<li>분석 - analiza</li>
+</ul>
+
+<h3>문법</h3>
+
+<ul>
+	<li>–는 반면 - w przeciwieństwie (do czegoś)</li>
+	<li>–다 보니 - po zrobieniu (czegoś) nastąpiło (coś)</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>13. 급식단가가 천차만별인 이유는 시도별 소방공무원 급식예산 지원 근거가 다르기 때문이다.</p>
+<p>14-1. 또한 공무원 정액급식비(14만원) 내에서</p>
+<p>14-2. 일반 행정 공무원은 한 달 20식(하루 한 끼)을 기준으로 하는 반면,</p>
+<p>14-3. 현업 근무자(3교대 근무자)의 경우 한 달 30식(하루 세끼)을 기준으로 하다 보니</p>
+<p>14-4. 한 끼 단가가 크게 떨어지는 영향도 있는 것으로 분석된다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>아울러 - ponadto</li>
+	<li>영양사 - dietetyk</li>
+	<li>아예 = 전혀</li>
+	<li>배치하다 - zostać rozmieszczonym/przydzielonym</li>
+	<li>전남 = 전라남도</li>
+	<li>단 - nawet</li>
+	<li>–에 불과하다 - być tylko/wyłącznie (czymś)</li>
+	<li>공개하다 - upublicznić, opublikować</li>
+	<li>네티즌 - internauta</li>
+	<li>법무부 - Ministerstwo Sprawiedliwości</li>
+	<li>방송 - telewizja</li>
+	<li>범죄자 - przestępca, kryminalista</li>
+	<li>화재 - pożar</li>
+	<li>진압하다 - ugasić (pożar)</li>
+	<li>반응 - reakcja</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>15. 아울러 영양사가 아예 배치되지 않은 지역도 있다는 문제도 있었다.</p>
+<p>16. 전남 지역 소방서에는 영양사가 단 1명도 없었다.</p>
+<p>17. 전북·경북·제주 지역의 소방서에는 영양사가 1명에 불과했다.</p>
+<p>18. 공개한 실제 소방관들의 급식 사진은 온라인상에서 논란이 되고 있다.</p>
+<p>19-1. 네티즌들은 법무부가 공개했던 교도소 급식, 방송에 공개됐던 구치소 급식 사진과 소방관 급식 사진을 비교하면서</p>
+<p>19-2. “소방관들이 범죄자들보다 더 못 먹고 있다”, “저런 부실한 밥을 먹고 화재 진압하러 가는 거냐”는 등의 반응을 보였다.</p>
+
 <h2>Źródło:</h2>
 
 <ul>
-	<li></li>
+	<li><a href="https://n.news.naver.com/mnews/article/025/0003391178">https://n.news.naver.com/mnews/article/025/0003391178</a></li>
 </ul>
 
 </body></html>
