--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -91,8 +91,8 @@
 		<li>problemy społeczne (np. starzenie się społeczeństwa)</li>
 		<li>relacje międzykoreańskie</li>
 		<li>społeczeństwo</li>
-		<li>sprawy kryminalne</li>
 		<li>wojskowość</li>
+		<li><del>sprawy kryminalne</del></li>
 	</ul>
 </details>
 
@@ -137,8 +137,8 @@
 				<th scope="row">2</th>
 				<td>11 października</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">sprawy kryminalne</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-2/zajecia/2">동거녀 살해 후 시멘트로 암매장…집 공사 중 16년만에 들통</a></td>
 			</tr>
 		</tbody>
 		<tbody>
