--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -76,13 +76,13 @@
 	<summary class="h2">Tematy tekstów</summary>
 
 	<ul class="sample-topics">
-		<li>bieżące sprawy</li>
 		<li>folklor/szamanizm</li>
 		<li>militaria (Polska-Korea)</li>
 		<li>motoryzacja</li>
 		<li>niska dzietność</li>
 		<li>opieka psychologiczna/psychiatryczna</li>
 		<li>popkultura</li>
+		<li><del>bieżące sprawy</del></li>
 	</ul>
 </details>
 
@@ -127,8 +127,8 @@
 				<th scope="row">2</th>
 				<td>11 października 2024</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">bieżące sprawy</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/2">"교도소 급식만도 못하네"…소방관 '3000원대 부실급식' 충격</a></td>
 			</tr>
 		</tbody>
 		<tbody>
