--- a/uj/zajecia/24-25l/klc2/index.html
+++ b/uj/zajecia/24-25l/klc2/index.html
@@ -108,16 +108,16 @@
 			</tr>
 			<tr>
 				<th scope="row">7</th>
-				<td>6월 6일</td>
+				<td>6월 6일 <nobr>(11:30–14:45)</nobr></td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
-				<td>6월 13일</td>
+				<td>6월 13일 <nobr>(9:45–14:45)</nobr></td>
 				<td class="schedule-lecture" colspan="2">10과. 취미가 같은 사람을 만나고 싶었어요</td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
-				<td>6월 ?일</td>
+				<td>6월 17일</td>
 				<td class="schedule-exam">시험</td>
 				<td class="schedule-exam" colspan="2">기말 시험 <nobr>(?, -1.15호)</nobr></td>
 			</tr>
