--- a/uj/zajecia/24-25l/ljk5/zajecia/znaki/4/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/znaki/4/index.html
@@ -119,22 +119,22 @@
 	<tr>
 		<td>食器</td>
 		<td>(깨끗하다, 씻다, 보관하다)</td>
-		<td></td>
+		<td>깨끗하게 씻은 <strong>식기(食器)</strong>는 부엌 서랍장에서 보관해요.</td>
 	</tr>
 	<tr>
 		<td>食堂</td>
 		<td>(회식, 고급스럽다, 먹다)</td>
-		<td></td>
+		<td>우리 회사에서는 지난주에 고급스러운 <strong>식당(食堂)</strong>에서 회식을 했다.</td>
 	</tr>
 	<tr>
 		<td>食費</td>
 		<td>(생활비, 비중, 크다)</td>
-		<td></td>
+		<td>생활비에서 가장 큰 비중을 차지한 항목은 <strong>식비(食費)</strong>이다.</td>
 	</tr>
 	<tr>
 		<td>食口</td>
 		<td>(명절, 온, 모이다)</td>
-		<td></td>
+		<td>이번 명절은 온 <strong>식구(食口)</strong>와 함께 고향에서 보냈다.</td>
 	</tr>
 	<tr>
 		<td>食糧</td>
