--- a/uj/zajecia/24-25l/ljk5/zajecia/znaki/3/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/znaki/3/index.html
@@ -146,27 +146,27 @@
 	<tr>
 		<td>文書</td>
 		<td>(컴퓨터, 작성하다, 보관하다)</td>
-		<td></td>
+		<td>작성한 <strong>문서(文書)</strong>는 컴퓨터에서 보관하고 있어요.</td>
 	</tr>
 	<tr>
 		<td>文學</td>
 		<td>(작품, 감상하다, 기회)</td>
-		<td></td>
+		<td>대학교 도서관에서 모든 대학생들은 <strong>문학(文學)</strong> 작품을 무료로 감상할 기회가 있어요.</td>
 	</tr>
 	<tr>
 		<td>文明</td>
 		<td>(고대 희랍, 기원)</td>
-		<td></td>
+		<td>가장 오래된 <strong>문명(文明)</strong>의 기원은 고대 희랍이에요.</td>
 	</tr>
 	<tr>
 		<td>文化</td>
 		<td>(언어, 배우다, 이해하다)</td>
-		<td></td>
+		<td>언어를 배우면 <strong>문화(文化)</strong>를 더 잘 이해할 수 있습니다.</td>
 	</tr>
 	<tr>
 		<td>文具店</td>
 		<td>(학교 앞, 공책과 볼펜)</td>
-		<td></td>
+		<td>우리 학교 앞에 있는 <strong>문구점(文具店)</strong>에서는 저렴한 공책과 볼펜을 찾을 수 있어요.</td>
 	</tr>
 </table>
 
@@ -261,50 +261,63 @@
 	</li>
 </ol>
 
+<h3>문장 만들기 연습</h3>
+
 <table>
 	<thead>
 		<th>한자어</th>
-		<th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th>
+		<th>단어</th>
+		<th>문장</th>
 	</thead>
 	<tr>
 		<td>公文</td>
 		<td>(보건복지부, 단체, 보내다)</td>
+		<td>시민단체는 보건복지부에 필요한 <strong>공문(公文)</strong>을 즉시 보냈다.</td>
 	</tr>
 	<tr>
 		<td>論文</td>
 		<td>(심사, 합격하다, 졸업하다)</td>
+		<td><strong>논문(論文)</strong>심사에 합격해야 졸업할 수 있다.</td>
 	</tr>
 	<tr>
 		<td>本文</td>
 		<td>(머리말, 맺음말)</td>
+		<td>논문을 쓸 때는 머리말과 맺은말을 짧게 써야 하지만 <strong>본문(本文)</strong>이 아주 중요한 가장 긴 부분이에요.</td>
 	</tr>
 	<tr>
 		<td>英文</td>
 		<td>(계약서, 국문, 작성하다)</td>
+		<td>국문으로 작성한 계약서를 <strong>영문(英文)</strong>으로 번역해야 한다.</td>
 	</tr>
 	<tr>
 		<td>例文</td>
 		<td>(통하다, 단어를 외우다)</td>
+		<td><strong>예문(例文)</strong>을 통해 단어를 외워요.</td>
 	</tr>
 	<tr>
 		<td>作文</td>
 		<td>(쓰기 수업, 실력)</td>
+		<td>쓰기 수업 덕분에 <strong>작문(作文)</strong> 쓰기 실력이 좋아지고 있어요.</td>
 	</tr>
 	<tr>
 		<td>注文</td>
 		<td>(인터넷, 제품, 저렴하다)</td>
+		<td>제품을 저렴하게 구매하려면 인터넷에서 <strong>주문(注文)</strong>하는 것이 제일이다.</td>
 	</tr>
 	<tr>
 		<td>漢文</td>
 		<td>(중학교, 선택과목)</td>
+		<td><strong>한문(漢文)</strong>은 중학교에서 선택과목이에요.</td>
 	</tr>
 	<tr>
 		<td>原文</td>
 		<td>(번역, 차이, 의역)</td>
+		<td><strong>원문(原文)</strong>을 의역하면 번역에 많은 차이가 있을 수 있다.</td>
 	</tr>
 	<tr>
 		<td>案內文</td>
 		<td>(박물관, 여러 언어)</td>
+		<td>박물관에 있는 <strong>안내문(案內文)</strong>이 여러 언어로 적혀 있어요 / 작성되어 있어요.</td>
 	</tr>
 </table>
 
