--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -23,12 +23,12 @@
 	<summary class="h2">Skala ocen</summary>
 
 	<ul>
-		<li>91-100%: bardzo dobry</li>
-		<li>81-90%: dobry plus</li>
-		<li>71-80%: dobry</li>
-		<li>61-70%: dostateczny plus</li>
-		<li>51-60%: dostateczny</li>
-		<li>0-50%: niedostateczny</li>
+		<li>90-100%: bardzo dobry</li>
+		<li>80-89%: dobry plus</li>
+		<li>70-79%: dobry</li>
+		<li>60-69%: dostateczny plus</li>
+		<li>50-59%: dostateczny</li>
+		<li>0-49%: niedostateczny</li>
 	</ul>
 </details>
 
@@ -259,13 +259,13 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">zwierzęta</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3">DMZ 지역에 사는 동물들</a></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
 				<td>2 kwietnia 2025</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><!--Korea Północna--></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
