--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1/index.html
@@ -108,8 +108,41 @@
 <h3>번역</h3>
 
 <p>1. 고 고옥임 할머니(오른쪽에서 두 번째)가 지난해 자택에서 막내딸 우효순 씨(오른쪽), 외손주들과 함께 웃고 있다.</p>
+<ul>
+	<li>Na zdjęciu zrobionym w zeszłym roku widzimy uśmiechniętych Ś.P. babcię Ko Go-ok (druga od prawej) w towarzystwie swojej najmłodszej córki Woo Hyo-soon (po prawej) i wnuków od strony mamy w rodzinnym domu.</li>
+	<li>[Na zdjęciu] świętej pamięci babcia Go Ok-im (druga od prawej) w zeszłym roku w domu ze swoją najmłodszą córką U Hyo-sun (pierwsza od prawej) oraz jej dziećmi uśmiechają się.</li>
+	<li>Świętej pamięci babcia Go Okim (druga po prawej) jeszcze w zeszłym roku śmiała się ze swoją najmłodszą córką Woo Hyosoon (po prawej) i wnukami.</li>
+	<li>Świętej pamięci Pani Go Ok-im (druga od prawej) uśmiecha się w swoim domu w towarzystwie najmłodszej córki, Woo Hyo-sun (po prawej), oraz wnuków.</li>
+	<li>Świętej pamięci Go Ok-im (druga od prawej) uśmiecha się w swoim domu w towarzystwie najmłodszej córki Woo Hyo-sun (po prawej) oraz wnuków na zdjęciu z ubiegłego roku.</li>
+	<li>Na zdjęciu, śmiejąca się wspólnie z wnukami oraz najmłodszą córką Woo Hyo-soon (po prawej), babcia Ko Ok-im (druga od prawej).</li>
+	<li>Ś.P Babcia Ko Ok-Im (druga od prawej) śmiejąc się w ubiegłym roku w swoim domu wraz z najmłodszą córką (prawa strona) oraz wnukami.</li>
+	<li>Pani Go Ok-nim (druga od prawej) w zeszłym roku śmiała się w domu razem ze swoją najmłodszą córką Woo Hyo-sun (po prawej) i wnukami.</li>
+	<li>Zmarła babcia Go Ok-im (druga od prawej strony) - uśmiechnięta we własnym domu, rok temu, wraz z najmłodszą córką, panią U Hyo-sun (z prawej strony) oraz wnukami.</li>
+</ul>
 <p>2-1. 고 할머니는 생전에 “집에서 살다 떠나고 싶다”는 뜻을 밝혀</p>
+<ul>
+	<li>Zmarła Babcia za życia wyraziła swoje pragnienie, aby „odejść z tego świata w domu”,</li>
+	<li>W trakcie życia zmarła babcia wyraziła pragnienie, że chce „żyć i odejść w swoim domu”, dlatego</li>
+	<li>Żyjąc, babcia Go ujawniła swoje pragnienie: "w domu żyłam i w domu chcę umrzeć",</li>
+	<li>Za życia Pani Go wyraziła życzenie: „Chcę odejść we własnym domu.”</li>
+	<li>Za życia pani Go wyraziła życzenie: „Chcę odejść, mieszkając we własnym domuˮ.</li>
+	<li>Pani Ko jeszcze za życia wyraziła pragnienie, aby „mieszkać i odejść we własnym domu”, dlatego</li>
+	<li>Zmarła babcia za życia ujawniła swoje pragnienie - „chce żyć i odejść w domu”.</li>
+	<li>Za życia pani Go podzieliła się swoim pragnieniem – chciała umrzeć w domu, dlatego</li>
+	<li>Za życia babcia Go wyznała: "Żyłam w domu i tu chcę umrzeć",</li>
+</ul>
 <p>2-2. 연명치료를 중단하고 생의 마지막을 가족들과 함께 집에서 보냈다.</p>
+<ul>
+	<li>po czym przerwała leczenie i spędziła ostatnie chwile swojego życia w domu z rodziną.</li>
+	<li>zaprzestała leczenia, a czas przed śmiercią spędziła razem z rodziną w miejscu zamieszkania.</li>
+	<li>dlatego zaprzestała leczenia podtrzymującego życie i w domu razem z rodziną doczekała końca swoich dni.</li>
+	<li>Dlatego zrezygnowała z terapii podtrzymującej życie i spędziła ostatnie chwile w domu, otoczona rodziną.</li>
+	<li>Zrezygnowała z leczenia podtrzymującego życie i spędziła ostatnie chwile życia w domu, w otoczeniu rodziny.</li>
+	<li>Zrezygnowała z leczenia podtrzymującego życie, a ostatnie chwile spędziła w domu razem z bliskimi.</li>
+	<li>Przerwała leczenie i resztę życia spędziła wraz z rodziną w domu.</li>
+	<li>Przerwała leczenie przedłużające życie i swoje ostatnie chwile spędziła w gronie rodziny w domu.</li>
+	<li>Przerwała leczenie podtrzymujące życie i spędziła ostatnie chwile razem z rodziną we własnym domu.</li>
+</ul>
 
 <hr class="homework">
 
@@ -168,9 +201,50 @@
 <h2 class="homework">숙제</h2>
 
 <p>8-1. 지난해 5월 평화의원 의료진은 할머니 댁을 찾아</p>
+<ul>
+	<li>W maju poprzedniego roku, personel medyczny Spokojnego Szpitala odwiedzając moją babcię w domu</li>
+	<li>W maju ubiegłego roku zespół medyczny z Kliniki Pokoju odwiedził dom Pani Ko.</li>
+	<li>W maju ubiegłego roku zespół medyczny z lecznicy Stowarzyszenia odwiedził panią Ko w jej domu,</li>
+	<li>W maju zeszłego roku personel medyczny Stowarzyszenia Pokoju odwiedził dom Pani Kim.</li>
+	<li>W maju ubiegłego roku zespół medyczny z kliniki Pyeonghwa odwiedził dom pani Ko,</li>
+	<li>W maju zeszłego roku, zespół medyczny z lecznicy Stowarzyszenia Pokoju odwiedził Panią Ko w jej domu,</li>
+	<li>W maju ubiegłego roku zespół medyczny Stowarzyszenia Pokoju odwiedził babcię w domu,</li>
+	<li>W maju poprzedniego roku zespół medyczny Stowarzyszenia Pokoju odwiedził panią Ko</li>
+</ul>
 <p>8-2. 더 이상의 진료와 투약을 원하지 않는다는 연명치료 중단 의사를 확인했다.</p>
-<p>9-3. 이후 매주 한 차례 이상 할머니 댁을 찾아 통증과 증상을 관리했고</p>
-<p>9-4. 일상생활을 돌보고 가족의 심리적 상태까지 살폈다.</p>
+<ul>
+	<li>potwierdził jej intencje odmowy przyjmowania leków i przerwania leczenia podtrzymującego życie.</li>
+	<li>Potwierdzony został wtedy jej zamiar do zaprzestania dalszego leczenia i zakończenia terapii podtrzymującej życie.</li>
+	<li>8-1/2. W maju ubiegłego roku lekarze z zespołu medycznego należącego do lecznicy Pyeonghwa złożyli wizytę w domu pani Ko i potwierdzili jej pragnienie zaprzestania otrzymywania opieki lekarskiej oraz przyjmowania leków, które miały na celu podtrzymywanie życia.</li>
+	<li>gdzie potwierdzili jej zamiar przerwania leczenia podtrzymującego życie oraz rezygnację z opieki lekarskiej i przyjmowania leków.</li>
+	<li>Potwierdzono wówczas jej wolę rezygnacji z dalszego leczenia i przyjmowania terapii podtrzymującej życie.</li>
+	<li>a jej brak chęci dalszego leczenia i przyjmowania leków potwierdził zamiar wstrzymania terapii przedłużających życie.</li>
+	<li>aby potwierdzić jej zamiar przerwania leczenia przedłużającego życie, który wynikał z niechęci Pani Ko do dalszego przyjmowania leków oraz opieki medycznej.</li>
+	<li>co więcej, Pani potwierdziła iż utrzymuje swoje zdanie w zaprzestaniu leczenia podtrzymującego życie jak i dalszej opieki lekarskiej.</li>
+	<li>By potwierdzić jej decyzję o zaprzestaniu leczenia przedłużającego życie i odmowie na branie leków.</li>
+</ul>
+<p>8-3. 이후 매주 한 차례 이상 할머니 댁을 찾아 통증과 증상을 관리했고</p>
+<ul>
+	<li>Od tamtej pory, odwiedzam babcię conajmniej raz na tydzień aby sprawdzić jej symptomy,</li>
+	<li>Od tamtej pory, co najmniej raz w tygodniu, zespół odwiedzał dom Pani Ko, w celu łagodzenia jej bólu i objawów.</li>
+	<li>Od tego momentu, co najmniej raz w tygodniu odwiedzali dom pani Ko, łagodzili jej cierpienie,</li>
+	<li>Od tego czasu, zespół odwiedzał dom pani Ko co najmniej raz w tygodniu, aby kontrolować ból i objawy,</li>
+	<li>Od tamtego czasu, zespół dwa razy w tygodniu odwiedza Panią Ko aby zająć się występującymi dolegliwościami i bólem,</li>
+	<li>Przynajmniej raz w tygodniu odwiedzali dom Pani Ko w celu złagodzenia bólu i objawów, oraz</li>
+	<li>Od tego momentu, co najmniej raz w tygodniu odwiedzali panią Ko, by kontrolować jej ból i objawy,</li>
+</ul>
+<p>8-4. 일상생활을 돌보고 가족의 심리적 상태까지 살폈다.</p>
+<ul>
+	<li>sprawdzam jej codziennie życie oraz stan psychiczny rodziny.</li>
+	<li>Pomagał on również w codziennych obowiązkach i obserwował stan psychiczny rodziny.</li>
+	<li>8-3/4. Następnie co najmniej raz w tygodniu odwiedzali dom, aby łagodzić ból i objawy, jak również pomóc jej w życiu codziennym, a nawet sprawdzać kondycję psychiczną jej rodziny.</li>
+	<li>opiekowali się nią w życiu codziennym, a także badali stan psychiczny jej rodziny.</li>
+	<li>8-3/4. Od tego momentu lekarze odwiedzali Panią Kim co najmniej raz w tygodniu, monitorując ból i objawy, pomagając w codziennych czynnościach oraz dbając o kondycję psychiczną/stan psychiczny rodziny.</li>
+	<li>a także dbać o jej codzienne funkcjonowanie oraz monitorować stan psychiczny rodziny.</li>
+	<li>pomóc w sprawach codziennych, a nawet sprawdzić stan psychiczny rodziny.</li>
+	<li>Zajmowali się codziennymi obowiązkami jak i obejmowali opieką psychologiczną biskich Pani Ko.</li>
+	<li>opiekować się nią na co dzień oraz monitorować stan psychiczny całej rodziny.</li>
+</ul>
 
 <hr class="homework">
 
