--- a/uj/zajecia/24-25l/ljk5/testy/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/testy/czytanie/1/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>Lektorat języka koreańskiego - poziom 4</title>
+	<title>Lektorat języka koreańskiego - poziom 5</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
@@ -11,214 +11,132 @@
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
 </head><body class="home">
 
-<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)<br><br>Kolokwium 1</h1>
 
 <div class="exam-question">
-	<h2>1. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+<h3>Lektorat języka koreańskiego - poziom 5 (czytanie) - Kolokwium 1</h3>
+	<h2>[1~2]. 다음을 읽고 물음에 답하십시오.</h2>
 	<ul>
-		<li>지식을 쌓다 - gromadzić wiedzę</li>
-	</ul>
-	<p>책을 많이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 지식을 쌓을 수 있다.</p>
-	<ol>
-		<li>읽으면 <strong class="correct">✓</strong></li>
-		<li>읽든지</li>
-		<li>읽지만</li>
-		<li>읽거나</li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h2>2. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h2>
-	<ul>
-		<li>개강 - rozpoczęcie zajęć</li>
-		<li>마찬가지 - to samo</li>
-		<li>셈 - sytuacja, rezultat</li>
-		<li>탓 - wina</li>
-		<li>마련 - przygotowanie, zapewnienie</li>
-		<li>나름 - swój sposób</li>
-	</ul>
-	<p>다음 주가 개강이니 방학도 다 <u>끝난 거나 마찬가지이다</u>.</p>
-	<ol>
-		<li>끝난 셈이다 <strong class="correct">✓</strong></li>
-		<li>끝난 탓이다</li>
-		<li>끝나기 마련이다</li>
-		<li>끝나기 나름이다</li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h2>3. 다음은 무엇에 대한 글인지 고르십시오.</h2>
-	<ul>
-		<li>검사 - badanie</li>
-		<li>전날 - dzień przed</li>
-		<li>정확하다 - być dokładnym</li>
-		<li>음주 - spożywanie alkoholu</li>
-		<li>피하다 - unikać</li>
-		<li>상품 - produkt</li>
-		<li>안내 - ogłoszenie</li>
-		<li>주의 사항 - zalecenie</li>
-		<li>순서 - kolejność</li>
-		<li>문의 - zapytanie</li>
-	</ul>
-	<div>
-		<img src="uj/zajecia/24-25z/ljk4/testy/1/img/3.png" alt="3">
-	</div>
-	<ol>
-		<li>상품 안내</li>
-		<li>주의 사항 <strong class="correct">✓</strong></li>
-		<li>사용 순서</li>
-		<li>장소 문의</li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h2>4. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h2>
-	<ul>
-		<li>예약 - rezerwacja</li>
-		<li>당일 - w dniu</li>
-		<li>불가 - niemożliwe</li>
-		<li>요금 - opłata</li>
-		<li>기준 - kryterium</li>
-		<li>평일 - dzień powszedni</li>
-		<li>주차장 - parking</li>
-		<li>포함하다 - uwzględnić, zawierać (w sobie)</li>
-		<li>관리 - zarządzanie, administracja</li>
-		<li>사무소 - biuro</li>
-		<li>내내 = 처음부터 끝까지</li>
-		<li>따로 - oddzielnie</li>
-	</ul>
-	<div>
-		<img src="uj/zajecia/24-25z/ljk4/testy/1/img/4.png" alt="4">
-	</div>
-	<ol>
-		<li>주말에는 이용 요금을 더 받는다. <strong class="correct">✓</strong></li>
-		<li>캠핑장은 1년 내내 이용할 수 있다.</li>
-		<li>예약은 이용 당일 홈페이지에서 하면 된다.</li>
-		<li>주차장을 이용하려면 돈을 따로 내야 한다.</li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h2>5. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h2>
-	<ul>
-		<li>최근 - ostatnio, niedawno</li>
-		<li>아파트 - blok mieszkalny</li>
-		<li>택배 기사 - kurier</li>
-		<li>청소원 - sprzątacz(ka)</li>
-		<li>무료 - bezpłatny</li>
-		<li>화제가 되다 - być na ustach wszystkich, być głośnym (tematem)</li>
-		<li>부담 없이 - bez ograniczeń, bez wahania</li>
-		<li>만족하다 - być zadowolonym</li>
-		<li>주민 - mieszkaniec</li>
-		<li>음료 - napój</li>
-		<li>간식 - przekąska</li>
-		<li>제공하다 - dostarczyć, zapewnić</li>
-		<li>가져다주다 = 제공하다</li>
-		<li>생기다 - pojawić się</li>
-		<li>적극적으로 - aktywnie</li>
-		<li>돈을 벌다 - zarabiać pieniądze</li>
-		<li>운영 - prowadzić (np. sklep)</li>
+		<li>여 - około</li>
+		<li>장학금 - stypendium</li>
+		<li>동전 - moneta</li>
+		<li>줍다 - podnieść</li>
+		<li>참되다 - być prawdziwym</li>
+		<li>기부 - dotacja</li>
+		<li>액수 - kwota</li>
+		<li>향하다 - skierować</li>
+		<li>제 눈의 안경 = 남은 어떻게 보든 자기 마음에 들면 그걸로 만족하다</li>
+		<li>엎질러진 물 = 다시 바로잡거나 돌이킬 수 없다</li>
+		<li>싼 게 비지떡 = 싼 것이라서 질이 나쁘다</li>
+		<li>티끌 모아 태산 = 조금씩 모은 것이 나중에 큰 덩어리가 된다</li>
+		<li>활용성 - użyteczność</li>
+		<li>기르다 - wykształcić (np. nawyk)</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>최근 한 아파트에서는 힘들게 일하는 택배 기사, 청소원 등을 위한 무료 카페를 열어서 화제가 되고 있다. 이 카페는 언제든 부담 없이 음료를 마시면서 쉴 수 있는 곳이어서 이용자들이 만족해하고 있다. 주민들은 처음에는 관심을 안 보였지만 지금은 카페에 음료와 간식을 제공하는 등 많은 도움을 주고 있다.</p>
+		<p>최근 한 할아버지가 거리를 청소하면서 모은 돈 100여 만 원을 장학금으로 내놓았다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)이라고 지난 5년 동안 바닥에 버려진 10원짜리 동전을 하나하나씩 주워 모은 것이다. 사람들은 큰돈이 있어야만 다른 사람을 도와 줄 수 있다고 생각한다. 하지만 참된 기부란 돈의 액수가 중요한 것이 아니라 다른 사람을 향한 사랑의 마음이다.</p>
 	</div>
+	<h3>1. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
 	<ol>
-		<li>이 카페에 간식을 가져다주는 주민들이 생겼다. <strong class="correct">✓</strong></li>
-		<li>카페를 열 때 아파트 주민들이 적극적으로 도왔다.</li>
-		<li>이 카페는 아파트 주민들이 돈을 벌기 위해서 열었다.</li>
-		<li>택배 기사들이 카페의 운영에 참여해 화제가 되고 있다.</li>
+		<li>제 눈의 안경</li>
+		<li>엎질러진 물</li>
+		<li>싼 게 비지떡</li>
+		<li>티끌 모아 태산</li>
+	</ol>
+	<h3>2. 윗글의 내용과 같은 것을 고르십시오.</h3>
+	<ol>
+		<li>생활 속에서 동전의 활용성을 높여야 한다.</li>
+		<li>다른 사람을 도와주려면 큰돈을 모아야 한다.</li>
+		<li>참된 기부는 자신보다 남을 먼저 생각해야 한다.</li>
+		<li>큰돈을 모으려면 아끼고 절약하는 습관을 길러야 한다.</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h2>6. 다음을 순서에 맞게 배열한 것을 고르십시오.</h2>
+	<h2>[3~4]. 다음을 읽고 물음에 답하십시오.</h2>
 	<ul>
-		<li>희망 - nadzieja</li>
-		<li>지원 - wsparcie</li>
-		<li>사업 - projekt</li>
-		<li>운행 - obsługa (np. linii autobusowej)</li>
-		<li>~에 비해(서) - w porównaniu (do czegoś)</li>
-		<li>예산 - budżet</li>
-		<li>들다 - kosztować</li>
-		<li>그러므로 = 그래서</li>
-		<li>요금 - opłata</li>
-		<li>지원하다 - wspierać (tutaj: dofinansować)</li>
-		<li>정부 - rząd</li>
-		<li>아끼다 - oszczędzać</li>
-		<li>추가 - dodatkowy</li>
-		<li>부담하다 - wziąć na siebie odpowiedzialność (za coś)</li>
-		<li>주민 - mieszkaniec</li>
-		<li>시골 마을 - obszary wiejskie</li>
-		<li>등장하다 - pojawić się</li>
+		<li>미처 = 아직</li>
+		<li>깨닫다 - zdać sobie sprawę, zrozumieć</li>
+		<li>목욕 - kąpiel</li>
+		<li>늘 = 항상</li>
+		<li>욕실 - łazienka</li>
+		<li>내보내다 - pozwolić wyjść (komuś skądś)</li>
+		<li>고개(를) 숙이다 - schylić głowę</li>
+		<li>꼼짝도 하지 않다 - zastygnąć w bezruchu</li>
+		<li>타이르다 - udobruchać</li>
+		<li>그제야 - dopiero wtedy</li>
+		<li>울먹이다 - być bliskim płaczu</li>
+		<li>대 - cios</li>
+		<li>얻어맞다 - zostać uderzonym</li>
+		<li>빗기다 - czesać</li>
+		<li>떠오르다 - przypomnieć (sobie coś)</li>
+		<li>서운하다 - czuć się zranionym</li>
+		<li>양보하다 - ustąpić</li>
+		<li>표현하다 - wyrazić</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>(가) 희망택시 지원 사업은 버스 운행에 비해 훨씬 적은 예산이 든다.</p>
-		<p>(나) 그러므로 택시 요금을 지원하더라도 정부는 예산을 아낄 수 있다.</p>
-		<p>(다) 이 택시의 이용 요금은 1,100원이고 추가 요금은 정부에서 부담한다.</p>
-		<p>(라) 버스가 다니지 않는 시골 마을에 주민들을 위한 희망택시가 등장했다.</p>
+		<p>정신없이 세 아이를 키우면서 내가 미처 생각하지 못한 것이 있었다. 그것을 깨닫게 된 것은 얼마 전 세 딸을 목욕시키면서였다. 나는 늘 그랬듯이 씻기가 편한 막내부터 씻겨 욕실에서 내보냈고 그 다음에는 둘째를 씻겼다. 그리고 나서 첫째를 씻기려고 하는데 아이가 고개를 푹 숙인 채 앉아서 꼼짝도 하지 않았다. 내가 몇 번이나 좋은 말로 타이르자 그제야 "왜 내가 항상 마지막이야?"라고 울먹이며 말했다. <u>순간 머리를 한 대 얻어맞은 것 같았다.</u> 어린이집에 보내려고 옷을 입히고 머리를 빗겨 줄 때 항상 "동생들 하고 나서 해 줄게."라고 하며 첫째를 기다리게 했던 나의 모습이 떠올랐다.</p>
 	</div>
+	<h3>3. 밑줄 친 부분에 나타난 ‘나’의 기분으로 가장 알맞은 것을 고르십시오.</h3>
 	<ol>
-		<li>(가)-(라)-(나)-(다)</li>
-		<li>(가)-(다)-(라)-(나)</li>
-		<li>(라)-(나)-(다)-(가)</li>
-		<li>(라)-(다)-(가)-(나) <strong class="correct">✓</strong></li>
+		<li>답답하다</li>
+		<li>서운하다</li>
+		<li>당황스럽다</li>
+		<li>불만스럽다</li>
+	</ol>
+	<h3>4. 윗글의 내용과 같은 것을 고르십시오.</h3>
+	<ol>
+		<li>나는 첫째부터 목욕시키려고 했다.</li>
+		<li>첫째는 늘 동생에게 양보해야 했다.</li>
+		<li>첫째는 자신의 마음을 자주 표현했다.</li>
+		<li>나는 첫째가 씻지 않으려고 해서 화를 냈다.</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h2>7. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+	<h2>5. 다음 신문 기사의 제목을 가장 잘 설명한 것을 고르십시오</h2>
 	<ul>
-		<li>막대 - pałeczka, kijek</li>
-		<li>통 - pojemnik</li>
-		<li>꽂다 - włożyć (np. długi przedmiot do pojemnika)</li>
-		<li>뽑다 - wyciągnąć</li>
-		<li>발표 - prezentacja</li>
-		<li>방식 - sposób</li>
-		<li>적극적 - aktywny</li>
-		<li>먼저 - najpierw, pierwszy</li>
-		<li>손을 들다 - podnieść rękę</li>
-		<li>소극적 - pasywny</li>
-		<li>기회 - szansa, możliwość</li>
-		<li>놓치다 - stracić (np. szansę)</li>
-		<li>학습자 = 학생</li>
-		<li>골고루 - równomiernie, sprawiedliwie</li>
-		<li>면 - strona</li>
-		<li>단계 - stopień</li>
-		<li>동일하다 - być identycznym</li>
-		<li>맞추다 - dopasować, dostosować</li>
-		<li>진행 - prowadzenie (np. zajęć)</li>
-		<li>부드럽다 - być gładkim</li>
-		<li>떨어지다 - brakować</li>
+		<li>기대감 - oczekiwania</li>
+		<li>개봉 - premiera</li>
+		<li>관객 - widz</li>
+		<li>평가 - ocena</li>
+		<li>예상 - przewidywania</li>
+		<li>관람하다 - oglądać</li>
+	</ul>
+	<div class="topik-textbox">영화 ‘사랑’, 기대감 속에 개봉 첫날 관객 수 오만 넘어</div>
+	<ol>
+		<li>영화 ‘사랑’에 대한 평가가 예상과 달리 좋지 않다.</li>
+		<li>영화 ‘사랑’의 개봉을 기대하고 있는 사람들이 많다.</li>
+		<li>영화 ‘사랑’에 대한 기대감이 높아 오만 명이 관람하였다.</li>
+		<li>영화 ‘사랑’의 평가가 나빠서 오만 관객을 기대하기 어렵다.</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h2>6. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+	<ul>
+		<li>건축하다 = 짓다</li>
+		<li>거대하다 - być ogromnym</li>
+		<li>바위 - głaz</li>
+		<li>모래 - piach</li>
+		<li>운반하다 - przewieźć, przenieść</li>
+		<li>기술 - technika</li>
+		<li>수분 - wilgoć</li>
+		<li>일정하다 - być stałym/ustalonym/jednakowym</li>
+		<li>단단하다 - być twardym</li>
+		<li>수월하다 = 쉽다</li>
+		<li>벽화 - malowidło ścienne</li>
+		<li>장면 - scena</li>
+		<li>묘사 - przedstawienie, obraz</li>
+		<li>적정량 - odpowiednia ilość</li>
+		<li>배치하다 - rozmieszczać</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>막대에 학생들의 이름을 써서 통에 꽂아 놓고 하나씩 뽑아서 발표를 시키는 수업 방식이 있다. 이것은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 방식이다. 적극적인 학생들이 먼저 손을 들고 질문에 대답하면 소극적인 학생들이 대답할 기회를 놓치게 된다. 이 방식은 모든 학습자들에게 골고루 수업에 참여할 수 있게 한다는 긍정적인 면이 있다.</p>
+		<p>고대 이집트 피라미드를 건축할 때 거대한 바위를 모래 위에서 운반해야 했는데 이를 위해서는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 기술이 중요했다. 모래에 수분이 일정하게 유지되면 모랫길이 단단해져서 운반이 수월했기 때문이다. 실제로 고대 벽화에 바위를 운반하는 길 위에 사람들이 물을 뿌리고 있는 장면이 묘사되어 있다.</p>
 	</div>
 	<ol>
-		<li>학생들의 이름을 빨리 기억하기 위한</li>
-		<li>수업의 단계를 동일하게 맞추기 위한</li>
-		<li>수업의 진행을 좀 더 부드럽게 하기 위한</li>
-		<li>적극성이 떨어지는 학생들에게도 기회를 주기 위한 <strong class="correct">✓</strong></li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h2>[Bonus]. 다음을 읽고 물음에 답하십시오.</h2>
-	<div class="topik-textbox">
-		<p>시각 장애인의 안내견은 주인과 있을 때 행인에게 관심을 두지 않는다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 안내견이 주인을 남겨 두고 행인에게 다가간다면 이는 주인이 위험에 처해 있다는 뜻이다. 안내견은 주인에게 문제가 발생하면 곧장 주변 사람에게 달려가 도움을 요청하도록 훈련을 받기 때문이다. 안내견이 행인의 주위를 맴돌면 안내견을 따라가 주인의 상태를 확인하고 구조 센터에 연락해야 한다.</p>
-	</div>
-	<h3>8. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3>
-	<ol>
-		<li>비록</li>
-		<li>물론</li>
-		<li>만약 <strong class="correct">✓</strong></li>
-		<li>과연</li>
-	</ol>
-	<h3>9. 이 글의 내용과 같은 것을 고르십시오.</h3>
-	<ol>
-		<li>안내견이 주인 곁을 떠나는 경우는 없다.</li>
-		<li>안내견은 문제가 생기면 구조 센터로 달려간다.</li>
-		<li>안내견이 다가오는 것은 위급한 상황이 생겼다는 뜻이다. <strong class="correct">✓</strong></li>
-		<li>안내견은 항상 주변의 사람들에게 관심을 갖도록 훈련을 받는다.</li>
+		<li>적정량의 물을 뿌리는</li>
+		<li>모래를 부드럽게 만드는</li>
+		<li>바위의 무게를 계산하는</li>
+		<li>운반하는 사람들을 배치하는</li>
 	</ol>
 </div>
 
