--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/2/index.html
@@ -47,13 +47,37 @@
 <h3>번역</h3>
 
 <p>0. 단군 신화</p>
+<ul>
+	<li>Legenda o Dangunie</li>
+</ul>
 <p>1. 환웅, 하늘에서 내려오다</p>
+<ul>
+	<li>Hwanung przybywa z Nieba</li>
+</ul>
 <p>2. 아득한 옛날 하늘의 왕 환인에게는 아들 환웅이 있었어요.</p>
+<ul>
+	<li>Bardzo dawno temu żył sobie król Niebios, Hwanin, który miał syna Hwanunga.</li>
+</ul>
 <p>3. 그런데 환웅은 아래 세상을 내려다보며 사람들을 널리 이롭게 할 뜻을 품고 있었지요.</p>
+<ul>
+	<li>Hwanung, spoglądając z góry na świat, zapragnął, by wszystkim ludziom żyło się lepiej.</li>
+</ul>
 <p>4-1. 아들의 뜻을 알게 된 환인은 환웅을 아래 세상으로 내려 보내기로 결심을 하고,</p>
+<ul>
+	<li>Poznawszy pragnienie syna, Hwanin postanowił zesłać Hwanunga na Ziemię.</li>
+</ul>
 <p>4-2. 하늘의 왕권을 상징하는 세 가지 보물을 환웅에게 주었어요.</p>
+<ul>
+	<li>Podarował mu trzy skarby, które symbolizowały królewską władzę Niebios.</li>
+</ul>
 <p>5-1. 환웅은 바람, 구름, 비를 관장하는 신하와 무리 삼천 명을 거느리고</p>
+<ul>
+	<li>Hwanung przewodził dostojnikami, którzy władali wiatrem, chmurami i deszczem, oraz trzema tysiącami ludzi,</li>
+</ul>
 <p>5-2. 태백산 신단수 아래에 내려와 인간 사회를 다스렸어요.</p>
+<ul>
+	<li>z którymi przybył pod święte drzewo Sindansu położone na górze Taebaek, by rządzić społeczeństwem ludzkim.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -74,11 +98,29 @@
 <h3>번역</h3>
 
 <p>6. 곰과 범이 찾아오다</p>
+<ul>
+	<li>Niedźwiedzica i tygrysica przychodzą w odwiedziny</li>
+</ul>
 <p>7. 환웅이 세상을 다스리던 때였어요.</p>
+<ul>
+	<li>Działo się to wtedy, gdy Hwanung rządził światem.</li>
+</ul>
 <p>8. 곰 한 마리와 범 한 마리가 같은 동굴에 살고 있었어요.</p>
+<ul>
+	<li>Niedźwiedzica i tygrysica mieszkały razem w jaskini.</li>
+</ul>
 <p>9. 곰과 범은 늘 신령스러운 환웅에게 사람으로 변하게 해 달라고 빌었어요.</p>
+<ul>
+	<li>Ciągle błagały boskiego Hwanunga, aby przemienił je w kobiety.</li>
+</ul>
 <p>10-1. 어느 날 환웅은 곰과 범에게 신비한 쑥 한 줌과 마늘 스무 개를 주면서</p>
+<ul>
+	<li>Pewnego dnia Hwanung, dając im garść tajemniczego piołunu i dwadzieścia ząbków czosnku,</li>
+</ul>
 <p>10-2. 이것을 먹고 백일 동안 햇빛을 보지 않는다면 사람이 될 것이라고 말하였어요.</p>
+<ul>
+	<li>powiedział, że jeśli przez sto dni będą się tym żywić i unikać światła słonecznego, to staną się kobietami.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -96,15 +138,47 @@
 <h3>번역</h3>
 
 <p>11. 단군이 태어나다</p>
+<ul>
+	<li>Narodziny Danguna</li>
+</ul>
 <p>12. 곰과 범은 이것을 받아 함께 먹었어요.</p>
+<ul>
+	<li>Niedźwiedzica z tygrysicą wspólnie je zjadły.</li>
+</ul>
 <p>13-1. 그러나 범은 견디지 못하고 동굴을 뛰쳐나가 사람이 되지 못하였고,</p>
+<ul>
+	<li>Jednakże tygrysica, nie mogąc wytrzymać w jaskini, wybiegła na zewnątrz, przez co nie stała się człowiekiem.</li>
+</ul>
 <p>13-2. 곰은 21일 만에 여자로 다시 태어났어요.</p>
+<ul>
+	<li>Niedźwiedzica natomiast po 21 dniach odrodziła się jako kobieta.</li>
+</ul>
 <p>14. 그리고 그 이름을 웅녀라고 하였지요.</p>
+<ul>
+	<li>Otrzymała na imię Ungnyeo.</li>
+</ul>
 <p>15. 웅녀는 혼인할 사람이 없었어요.</p>
+<ul>
+	<li>Nie było nikogo, kto wziąłby ją za żonę.</li>
+</ul>
 <p>16. 웅녀는 많은 날을 신단수 아래로 찾아와 아이를 갖게 해 달라고 빌었어요.</p>
+<ul>
+	<li>Przez wiele dni błagała pod świętym drzewem Sindansu, prosząc o dziecko.</li>
+</ul>
 <p>17. 웅녀의 간절한 기도를 들은 환웅은 잠시 사람으로 변하여 그녀와 혼인을 하였어요.</p>
+<ul>
+	<li>Hwanung, wysłuchawszy jej gorliwej modlitwy, na chwilę przemienił się w człowieka i ją poślubił.</li>
+</ul>
 <p>18. 그리고 환웅과 웅녀 사이에서 아들이 태어났어요.</p>
+<ul>
+	<li>Ze związku Hwanunga i Ungnyeo narodził się syn.</li>
+</ul>
 <p>19. 그가 바로 ‘단군왕검’이랍니다.</p>
+<ul>
+	<li>Był to właśnie Dangun Wanggeom.</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
 
 <h3>어휘</h3>
 
@@ -121,10 +195,72 @@
 <h3>번역</h3>
 
 <p>20. 단군, 나라를 세우고 조선이라 하다</p>
+<ul>
+	<li>Dangun, założył państwo i stworzył Joseon</li>
+	<li>Dangun założył państwo i nazwał je „Joseon”</li>
+	<li>Tangun zakłada państwo o nazwie Joseon</li>
+	<li>Dangun zakłada państwo i nazywa je Joseon</li>
+	<li>Dangun zakłada królestwo i nazywa je Joseon.</li>
+	<li>Tangun zakłada państwo o nazwie Joseon</li>
+	<li>Dangun, który założył państwo zwane Joseon</li>
+	<li>Dangun, tworzy świat i Joseon</li>
+	<li>Dangun, założyciel państwa Joseon.</li>
+	<li>Dangun zakłada państwo i nazywa je Joseon</li>
+</ul>
 <p>21. 기원전 2333년에 단군왕검은 평양성에 나라를 세우고 나라 이름을 ‘조선’이라고 하였어요.</p>
+<ul>
+	<li>W 2333 roku przed naszą erą Król Dangun w Pyeongyang założył państwo i nazwał je Jeoson.</li>
+	<li>W 2333 roku p.n.e. Dangun Wanggeom założył państwo w Zamku Pyeongyang i nazwał je „Joseon”</li>
+	<li>W 2333 r. p.n.e. na zamku w Pyongyangu Dangun Wanggeom założył państwo i nadał mu nazwę „Joseon”.</li>
+	<li>W 2333 r. p.n.e. Dangun Wanggeom w twierdzy Pyeongyang założył państwo i nadał mu nazwę Joseon.</li>
+	<li>W 2333 roku p.n.e. Dangun Wanggeom założył królestwo z siedzibą w Twierdzy Pyeongyang i nadał mu nazwę Joseon.</li>
+	<li>W roku 2333 przed naszą erą, Tangun Wanggeom założył państwo w twierdzy Pyeongyang i nazwał je Joseon.</li>
+	<li>W roku 2333 przed naszą erą w zamku Pyongyang, Dangun Wanggeom ustanowił państwo, które nazwał Joseon.</li>
+	<li>2333 lata przed narodzinami Chrystusa, Dangun Wangkkeom stworzył kraj w Pyeonyang i nazwał je Joseon.</li>
+	<li>W 2333 roku p. n. e. Dangun założył państwo w Pyeongyang i nazwał je ‘Joseon’.</li>
+	<li>W 2333 roku n.e. Dangun Wanggeom założył państwo w Pyongyangu i nazwał to państwo Joseon.</li>
+</ul>
 <p>22. 단군왕검은 얼마 후에 다시 도읍을 백악산 아사달로 옮겼지요.</p>
+<ul>
+	<li>Po jakimś czasie Król Dangun ponownie przeniósł stolicę do Asadal na górze Baekansan.</li>
+	<li>Po pewnym czasie, Dangun Wanggeom przeniósł stolicę na Górę Baekak, do Asadal.</li>
+	<li>Po pewnym czasie przeniósł on stolicę do Asadalu na górze Baegaksan.</li>
+	<li>Jakiś czas później ponownie przeniósł stolicę, tym razem do Asadalu na górze Baekak.</li>
+	<li>Po pewnym czasie przeniósł stolicę do Asadal, położonego na górze Baegak.</li>
+	<li>Wkrótce potem przeniósł stolicę do Asadal na górze Baekak.</li>
+	<li>Jednak niedługo potem przeniósł stolicę do Asadal na górze Bekaksan.</li>
+	<li>Po chwili, znów przeniósł stolicę do Asadal na górze Baekak.</li>
+	<li>Po jakimś czasie przeniósł on stolicę na Beagaksan w Asadal.</li>
+	<li>Po pewnym czasie Dangun Wanggeom przeniósł z powrotem stolicę na górę Baekak w Asadalu.</li>
+</ul>
 <p>23. 단군왕검은 그곳에서 1,500년 동안 나라를 평화롭게 다스렸지요.</p>
+<ul>
+	<li>Król Dangun rządził pokojowo tym kraju przez 1500 lat.</li>
+	<li>Tam Król Dangun rządził pokojowo swoim państwem przez 1500 lat.</li>
+	<li>W tym miejscu Dangun Wanggeom rządził krajem w pokoju przez 1500 lat.</li>
+	<li>Tam Dangun Wanggeom rządził pokojowo przez kolejne 1 500 lat.</li>
+	<li>Dangun Wanggeom rządził swoim królestwem w pokoju przez 1500 lat.</li>
+	<li>Przez 1500 lat Tangun Wanggeom rządził krajem w pokoju.</li>
+	<li>Stamtąd pokojowo rządził swoim państwem przez 1500 lat.</li>
+	<li>Dangun Wangkkeom przez 1,500 lat panował tam w pokoju.</li>
+	<li>Dangun rządził pokojowo krajem przez 1,500 lat.</li>
+	<li>W tym miejscu, przez następne 1500 lat, Dangun Wanggeom w pokoju rządził krajem.</li>
+</ul>
 <p>24. 이후 아사달에 들어가 산신이 되었는데 나이가 1,908세였다고 해요.</p>
+<ul>
+	<li>Następnie po wstąpieniu do Asadal stał się Królem Gór, mówi się że miał wtedy 1908 lat.</li>
+	<li>Później, wstępując do Asadal, stał się bogiem górskim. Powiada się, że miał wtedy 1908 lat.</li>
+	<li>Później udał się do Asadalu i został bogiem góry. Mówi się, że dożył 1908 lat.</li>
+	<li>Następnie udał się do Asadalu i został bogiem góry, mając 1 908 lat.</li>
+	<li>Następnie udał się do Asadal, gdzie stał się bóstwem górskim. Mówi się, że w chwili odejścia miał 1908 lat.</li>
+	<li>Następnie udał się do Asadal, gdzie stał się duchem gór. Mówi się, że miał wtedy 1908 lat.</li>
+	<li>Mówi się, że po tym czasie, mając lat 1908, wstąpił on w Asadal i stał się bóstwem góry.</li>
+	<li>Później, udał się do Asadal gdzie stał się aniołem górski - mówi się, iż miał wtedy 1,908 lat.</li>
+	<li>Po tym, przybył do Asadal i stał się Bogiem żyjącym przez 1,908 lat.</li>
+	<li>Po tym czasie, wstąpił do Asadalu i stał się bóstwem góry, mając lat 1908.</li>
+</ul>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
