--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -24,12 +24,12 @@
 	<summary class="h2">Grading scale</summary>
 
 	<ul>
-		<li>91-100%: very good</li>
-		<li>81-90%: good plus</li>
-		<li>71-80%: good</li>
-		<li>61-70%: satisfactory plus</li>
-		<li>51-60%: satisfactory</li>
-		<li>0-50%: unsatisfactory</li>
+		<li>90-100%: very good (5)</li>
+		<li>80-89%: good plus (4.5)</li>
+		<li>70-79%: good (4)</li>
+		<li>60-69%: satisfactory plus (3.5)</li>
+		<li>50-59%: satisfactory (3)</li>
+		<li>0-49%: unsatisfactory (2)</li>
 	</ul>
 </details>
 
